[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mutual"
version = "0.1.0"
description = "Mutual social platform backend"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "psycopg[binary]>=3.1",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "PyJWT>=2.8",
  "python-multipart>=0.0.9",
  "redis>=5.0",
  "celery>=5.4",
  "python-dotenv>=1.0",
]

[tool.setuptools]
packages = []
